# voltex

./: .eslintrc.json  .git-blame-ignore-revs  .gitignore  CNAME  LICENSE  README.md  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts  vite.web.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy.yml  packages.yml  plugin-api.yml
assets/: coi-serviceworker.js  icon.icns  manifest.webmanifest
client/: .gitignore  data.json  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.web.config.ts
client/src/: global.d.ts  glsl.d.ts  preload.ts
protos/: tracereader.proto
scripts/: large-enum-plugin.js  profile-expanded-enum.mjs
server/: .gitignore
server/crates/mf4lib/: Cargo.toml
server/crates/mf4lib/benches/: dbc_benchmark.rs
server/crates/mf4lib/src/: blocks.rs  dbc.rs  frame.rs  lib.rs  trc.rs
server/crates/mf4lib/test/dbc/: spec.dbc
server/crates/mf4lib/test/dbc/cantools/: LICENSE
server/crates/mf4lib/test/trc/: 1.0.trc  1.1.trc  1.2.trc  1.3.trc  2.0.trc  2.1.trc
server/crates/server/: Cargo.toml
server/crates/server/src/: main.rs
src/: global.d.ts  preload.ts
src/app/: CommandManager.ts  MenuBar.ts  Plugin.ts  PluginConfigManager.ts  PluginManager.ts  RenderObject.ts  RenderProfiler.ts  Renderer.ts  RowContainerRenderObject.ts  RowImpl.ts  RowManager.ts  Signal.ts  SignalColorManager.ts  SignalMetadataManager.ts  SignalSourceManagerImpl.ts  VerticalSidebar.ts  WebGLUtils.ts  (+25 more)
(+240 files in other folders)
