[package]
name = "mf4lib"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.14.1"
chrono = "0.4.39"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.4", features = ["flamegraph", "criterion"] } 

[[bench]]
name = "dbc_benchmark"
harness = false
