[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
grpc-api = { version = "0.1.0", path = "../grpc-api" }
mf4lib = { version = "0.1.0", path = "../mf4lib" }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
tonic-web = "0.12.3"
tokio-stream = "0.1.17"
serde_json = "1.0.140"
